tests/NormalTests/paczka1/fuzzy1/71177816.err
Error in line 7: hDFJVVyXQe S867 6,7
Error in line 3: B2icL A936 99,2
Error in line 15: nIW S235 50,7
Error in line 28: 6uEXReK5Ce S549 69,02
Error in line 17: nIW A936 14,0
Error in line 35: nIW S235 81,4
